decklink: Disable inputs/outputs in PAUSED->READY to allow going to PAUSED again from there

https://bugzilla.gnome.org/show_bug.cgi?id=755426